# valkyrie

./: .gitignore  CMakeLists.txt  LICENSE  README
doxygen/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt
examples/c/: CMakeLists.txt
examples/c/single_bar/: CMakeLists.txt  single_bar.c  single_bar.inp.lua
examples/c/three_bar/: CMakeLists.txt  three_bar.c  three_bar_truss.inp.lua
examples/six_bar_truss/: six_bar_truss.inp
lua/: CMakeLists.txt  lua.cpp  solve.lua
python/: .CMakeLists.txt.swp  CMakeLists.txt  python.cpp  pyvalkyrie.py
src/: CMakeLists.txt  entity.h  force.cpp  force.h  material.cpp  material.h  model.cpp  model.h  node.cpp  node.h  property.cpp  property.h  rod.cpp  rod.h  spc.cpp  spc.h  staticanalysis.cpp  staticanalysis.h  valkyrie.cpp  valkyrie.h  version.cpp  version.h
tests/: CMakeLists.txt  test_vk_entity.h  test_vk_force.h  test_vk_material.h  test_vk_model.h  test_vk_node.h  test_vk_property.h  test_vk_rod.h  test_vk_spc.h  test_vk_staticanalysis.h  test_vk_version.h  tests.cpp
